--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <title>myportfolio</title>
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container" id="container">
-      </div>
-    </nav>
-    <div class="HeroPage" id="HeroPage">
+    <div id="root">
+  
     </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
